# centralbuilder

./: .gitignore  AddPkg.cmake  CMakeLists.txt  CentralBuilder.cmake  FindPackageTryConfigFirst.cmake  FindPackageTryConfigOnly.cmake  README.md  ReportCMakeLists.txt  create_report.cmake  packages.cmake
detail/: AddPkg.cmake  ReportCMakeLists.txt
